[package]
name = "playgorund"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustlycss_types = { version = "0.1.0", path = "../rustlycss_types"}
rustlycss_parser = {version = "*", path = "../rustlycss_parser"}
rustlycss_codegen = {version = "*", path = "../rustlycss_codegen"}

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
