[package]
name = "rustlycss_codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustlycss_types = { version = "0.1.0", path = "../rustlycss_types"}
rustlycss_parser = {version = "*", path = "../rustlycss_parser"}
sourcemap = "6.3.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benches_pure_codegen"
harness = false

[[bench]]
name = "benches_srcmap_codegen"
harness = false
